XMCDParserUnitTests, DiscSvcIntTests, DiscResourceIntTests; formatting